--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <div id="particles-js">
   <div class="header">
       <h1>
-        <span class="site-title">{{site.username}}calvin-jungle</span>
+        <span class="site-title">calvin-jungle</span>
         <span class="site-description">{{site.user_title}}Welcome to my Blog!</span>
       </h1>
       <div class="header-icons">
