--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,30 +1,21 @@
  <div class="user-details">
-  <h1> My Expertise </h1>
+  <h1>I'm a Student Digital Artist Living in New Zealand.</h1>
   <p> {{site.user_description}} </p>
 </div>
   <div class="user">
     <div class="tech">
       <h2>Design</h2>
-      <i class="devicon-html5-plain-wordmark"></i>
-      <i class="devicon-bootstrap-plain-wordmark colored"></i>
-      <i class="devicon-sass-original colored"></i>
-      <p>Mumblecore hexagon kombucha, pitchfork four loko raclette intelligentsia master cleanse.
-        Vinyl XOXO lumbersexual</p>
+      
+      <p>Photoshop, illustrator, kitra, wacom.</p>
     </div>
     <div class="tech">
       <h2>Code</h2>
-      <i class="devicon-javascript-plain colored"></i>
-      <i class="devicon-react-original-wordmark colored"></i>
-      <i class="devicon-nodejs-plain-wordmark"></i>
-      <p>Mumblecore hexagon kombucha, pitchfork four loko raclette intelligentsia master cleanse.
-        Vinyl XOXO lumbersexual</p>
+      
+      <p>Linux, Python, C/C++ - Learning how to program.</p>
     </div>
     <div class="tech">
       <h2>Tools</h2>
-      <i class="devicon-git-plain"></i>
-      <i class="devicon-gulp-plain colored"></i>
-      <i class="devicon-atom-original-wordmark"></i>
-      <p>Mumblecore hexagon kombucha, pitchfork four loko raclette intelligentsia master cleanse.
-        Vinyl XOXO lumbersexual</p>
+      
+      <p>Learning - Autodesk Maya, Zbrush, Substance, Mari, Houdini, Nuke, Blender and Unreal Engine.</p>
     </div>
 </div>
