--- a/_includes/about.html
+++ b/_includes/about.html
@@ -16,6 +16,6 @@
     <div class="tech">
       <h2>Tools</h2>
       
-      <p>Learning - Autodesk Maya, Zbrush, Substance, Mari, Houdini, Nuke, Blender and Unreal Engine.</p>
+      <p>Maya, Zbrush, Substance, Mari, Houdini, Nuke, Blender and UE.</p>
     </div>
 </div>
