--- a/_includes/about.html
+++ b/_includes/about.html
@@ -6,7 +6,7 @@
     <div class="tech">
       <h2>Design</h2>
       
-      <p>Photoshop, illustrator, kitra, wacom.</p>
+      <p>Photoshop, illustrator, krita, wacom.</p>
     </div>
     <div class="tech">
       <h2>Code</h2>
