--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,7 @@
         <span class="site-description">{{site.user_title}}Welcome to my Blog!</span>
       </h1>
       <div class="header-icons">
-        <a aria-label="Send email" href="mailto:calvin.jungle@outlook.com"><i class="icon fa fa-envelope"></i></a>
+        <a aria-label="Send email" href="mailto:calxen@pm.me"><i class="icon fa fa-envelope"></i></a>
         <a aria-label="My Twitter" target="_blank" href="https://twitter.com/cal_xen"><i class="icon fa fa-twitter" aria-hidden="true"></i></a>
       </div>
       <div class="header-links">
